Some changes of different nature

--- a/_posts/2022-07-06-go-testing-101.md
+++ b/_posts/2022-07-06-go-testing-101.md
@@ -4,7 +4,7 @@ published: true
 ---
 
 
-Testing. It has been said and written a lot about testing in software engineering, and some new trends and strategies appeared, especially in the early 2000s. There is no silver bullet for doing it perfectly and it has been one of the topics that generated a lot of discussions about how to do it well and how much you should test your code. In this post, I'm not going to talk about abstract things or how they do it well, I just wanna show all the testing tools that I know and use for testing my Golang applications. This is mostly aimed at Golang beginners. If you have been using Go for a while, this will probably sound too basic for you. Let's start.
+Testing. It has been said and written a lot about testing in software engineering, and some new trends and strategies appeared, especially in the early 2000s. There is no silver bullet for doing it perfectly and it has been one of the topics that generated a lot of discussions about how to do it well and how much you should test your code. In this post, I'm not going to talk about abstract things or how they do it well, I just wanna show all the testing tools that I know and use for testing my Golang applications. This is mostly aimed at Golang beginners. If you have been using GO for a while, this will probably sound too basic for you. Let's start.
 
 <br/><br/>
 
@@ -52,7 +52,7 @@ func TestSumMixed(t *testing.T) {
 
 This is not much different from how you do it in some other languages. Maybe the most confusing thing is the need for the `*testing.T` argument, but you get used to it eventually.
 
-For the sake of readability, I've used the `assert` package, but if you don't want to use external dependencies you can do it like this:
+For the sake of readability, I've used the [`assert` package](https://github.com/stretchr/testify#assert-package), but if you don't want to use external dependencies you can do it like this:
 
 ```go
     if if reflect.DeepEqual(expected, result){
@@ -62,7 +62,7 @@ For the sake of readability, I've used the `assert` package, but if you don't wa
 
 `reflect.DeepEqual` is not always needed, but if you want to compare the inner values and not the struct, it is advisable to use it to avoid false negatives.
 
-If one of the returning values of the function is an `error`, it is very common to make the assert on the error to check if there is an error not and if it is the expected error.
+If one of the returning values of the function is an `error`, it is very common to make the assert on the error to check if there is an error or not and if it is the expected error.
 
 <br/><br/>
 
@@ -114,9 +114,9 @@ Both of the packages above have documentation about how to use them so I won't g
 
 Mocks in Golang have the peculiarity that they need to be created over an existing interface, which means that you cannot mock a struct and you should always receive and handle interfaces over concrete structs if you want to make extensive testing.
 
-The libraries I used so far, consist of generating the Mock for the desired interfaces, including the package in the tests in which you want to use the mocks, writing the expectations and the returns, and finally asserting that the expectations have been met.
+The strategies I used so far, consist of generating the Mock for the desired interfaces, including the package in the tests in which you want to use the mocks, writing the expectations and the returns, and finally asserting that the expectations have been met.
 
-Golang community good practices mentions that you should not create interfaces just for the sake of testing and you should use the real object instead, but I find this very confusing for a specific use case: **testing external services.**
+Golang community good practices mention that you should not create interfaces just for the sake of testing and you should use the real object instead, but I find this very confusing for a specific use case: **testing external services.**
 
 <br/><br/>
 
@@ -132,15 +132,15 @@ Golang standard library provides a package for making this kind of mocking: [htt
 - Generate a new `httpserver` server injecting the handler created in the previous step.
 - Use the URL of this server instead of the service that your code is using. As you can imagine, the URL of the service needs to be configurable, which I don't see it much of a problem because I think is a good practice to be able to inject these configurations.
 
-I think that testing should be as simple as possible, and for me, this is a little bit of toil for each test that becomes worse as the test suite grows and adds noise to the test code. Furthermore, this option doesn't allow you to assert call expectations easily, which I think is important in complex code that makes several calls to one or more services. For these reasons, I personally prefer the next option over this one.
+I think that testing should be as simple as possible, and for me, this is a little bit of toil for each test that becomes worse as the test suite grows and adds noise to the testing code base. Furthermore, this option doesn't allow you to assert call expectations easily, which I think is important in complex code that makes several calls to one or more services. For these reasons, I prefer the next option over this one.
 
 #### **2. Wrapping the call on an interface**
 
-This is the option that I usually implement because I think is simple and the trade is just adding an interface for connecting to the service, which I think is good for the design of the code in most of the scenarios.
+This is the option that I usually implement because I think is simple and the -off is just adding an interface for connecting to the service, which I think is good for the design of the code in most of the scenarios.
 
-For this case, you only have to add an interface on the top of HTTP (or gRPC or whatever protocol you are using) and use the mock of that interface for the test. Let's see how it works with an example.
+For this case, you only have to add an interface on top of HTTP (or gRPC or whatever protocol you are using) and use the mock of that interface for the test. Let's see how it works with an example.
 
-Let's imagine thawe want to obtain a random number from an external API and the implementation is the following:
+Let's imagine that we want to obtain a random number from an external API and the implementation is the following:
 
 ```go
 func GetRandomNum(url string) (int, error)
@@ -207,15 +207,15 @@ func TestGetRandomNumber(t *testing.T) {
 }
 ```
 
-The code above is only to exemplify in a simple way how to use the mock, but we don't usually create a test for testing the mock and this is included in a bigger test case.
+The code above is only to exemplify in a simple way how to use the mock, but we don't usually create a test for testing the mock and this is usually included in a bigger test case.
 
-In line with this, if you are creating a public package that is exposed for external use, my advice is that you provide the mock too. This way, the users of your code won't have to do it themselves and it is usually easier for you because you have the interface already defined in your code.
+In line with this, if you are creating a public package that is exposed for external use, my advice is that you provide the mock too. This way, the users of your code won't have to do it themselves and, creating the mock is usually easier for you because you have the interface already defined in your code.
 
 <br/><br/>
 
 ## Racy tests
 
-Golang makes concurrency quite simple and also provides a race detector for helping to test this. Let's see how to use it following the previous example. Imagine that we want to get a random number from an API to return a random sum. We can do it with the following code:
+Golang makes concurrency quite simple and also provides a race detector for helping to test it. Let's see how to use it following the previous example. Imagine that we want to get a random number from an API to return a random sum. We can do it with the following code:
 
 ```go
 func randomSum(ctx context.Context, numProvider Random) (int, error) {
@@ -277,13 +277,13 @@ func TestRacy(t *testing.T) {
 
 And then executing the `go test` command using the `-race` flag for race detection.
 
-You can find a detailed explanation of this feature and more examples on [this post from the Go blog](https://go.dev/blog/race-detector).
+You can find a detailed explanation of this feature and more examples in [this post from the Go blog](https://go.dev/blog/race-detector).
 
 <br/><br/>
 
 ## Benchmark
 
-Another cool feature that Golang provides is benchmarking. If you have a piece of code that you want to be performant or you just want to measure its execution, you can write a benchmark test. The differences are that you need to pass the test `*testing.B` argument instead of `*testing.T`, and you need to integrate to the `N` property of that argument. Also, we need to pass the `-bench` flag to the `go test` command. Here is a basic example using the `sum` function that we defined at the beginning of this post:
+Another cool feature that Golang provides is benchmarking. If you have a piece of code that you want to be performant or you just want to measure its execution, you can write a benchmark test. The differences are that you need to pass a `*testing.B` argument instead of `*testing.T`, and you need to iterate until the value of the `N` property of that argument. Also, we need to pass the `-bench` flag to the `go test` command. Here is a basic example using the `sum` function that we defined at the beginning of this post:
 
 ```go
 var (
@@ -306,7 +306,7 @@ This may be a little bit out of scope for this post, but if you want to know mor
 
 Fuzzing consists of repeating several times the same tests but varying the inputs so we can test many different inputs at once.
 
-This is supported in Golang natively quite recently, from version 1.18, but there are some libraries, prior to including it in GO, that provided this behavior like [`google/gofuzz`](https://github.com/google/gofuzz).
+This is supported in Golang natively quite recently, from version 1.18, but there are some libraries, before including it in GO, that provided this behavior like [`google/gofuzz`](https://github.com/google/gofuzz).
 
 For making these tests, you need to seed the inputs that you want to vary and use them in the `.Fuzz` argument function. Let's see it with the example of the function that sums two integers:
 
@@ -321,7 +321,7 @@ func FuzzSum(f *testing.F) {
 }
 ```
 
-As we want to vary two integers for this function, `x` and `y`, we need to seed them in the method `.Add`, which in this case receives two integers, and for the same reason we pass to `.Fuzz` a function with the signature `func(*testing.T, int, int)`.
+As we want to vary two integers for this function, `x` and `y`, we need to seed them in the method `.Add`, which in this case receives two integers, and for the same reason we pass to `.Fuzz` a function with the signature `func(*testing.T, int, int)`, that again contains two integers.
 
 [Here is the link](https://go.dev/doc/fuzz/) to the Golang documentation for more extensive info.
 
@@ -329,7 +329,7 @@ As we want to vary two integers for this function, `x` and `y`, we need to seed 
 
 ## Acceptance testing or end-to-end
 
-These tests consist of testing the complete workflow on your application instead of specific components. These are usually the most difficult tests because they require a wider setup, the execution is slower than the unit tests and there are many components involved.
+These tests consist of testing the complete workflow on your application instead of specific components. These are usually the most difficult tests because they require a wider setup, the execution is slower than the unit tests and there are more components of your application involved because you are testing a complete workflow.
 
 If your application does not receive any traffic and doesn't have external dependencies, you can skip all the setup and write them the same way you write unit tests, although in a different folder for organizational hygiene. Nonetheless, if you receive traffic and/or connect to external systems, my advice is to run your application and test it from outside like you were a user, a kind of black-box testing.
 
@@ -350,7 +350,7 @@ For this section, I won't add an example to the post because it'll add too much 
 
 ## Coverage report
 
-Another great option that GO has natively is the coverage report for the test. Furthermore, it makes it quite simple to execute. Using the `-cover` option, when executing `go test`, it will print a summary of the report in the standard output. However, if you want a complete coverage profile you can use the `-coverprofile=<output_file>` option to generate you can visualize using `go tool`. For example, if you want to visualize in HTML format, you can run `go tool cover -html=<output_file>`. Again, we can find a more detailed and better explanation of [this feature in the official documentation](https://go.dev/blog/cover).
+Another great feature that GO has natively is the coverage report for the tests. Furthermore, it makes it quite simple to execute. Using the `-cover` option, when executing `go test`, it will print a summary of the report in the standard output. However, if you want a complete coverage profile you can use the `-coverprofile=<output_file>` option to generate you can visualize using `go tool`. For example, if you want to visualize in HTML format, you can run `go tool cover -html=<output_file>`. Again, we can find a more detailed and better explanation of [this feature in the official documentation](https://go.dev/blog/cover).
 
 <br/><br/>
 
@@ -358,6 +358,6 @@ Another great option that GO has natively is the coverage report for the test. F
 
 Golang provides natively a lot of useful testing features and configuration, as we saw in this post, and there are even more that we didn't go through to avoid extending too much (you can check [more options on the official documentation](https://pkg.go.dev/cmd/go#hdr-Testing_flags)). Also, there is a good ecosystem of third-party tools for helping us.  
 
-With this post, I've pretended to provide a good base for understanding the options that we have when testing our GO code. In fact, this is more than I used in my day-to-day work, which we can reduce to unit and end-to-end testing mostly. However, I wanted to show most of the useful options that I know, so this can serve as a starting point to begin/improve your testing in GO.
+With this post, I've intended to provide a good base for understanding the options that we have when testing our GO code. In fact, this is more than I used in my day-to-day work, which I can reduce to unit and end-to-end testing mostly. However, I wanted to show most of the useful options that I know, so this can serve as a starting point to begin or improve your testing in GO.
 
-If you want to have the examples I used on this post, I've stored them on [this repository](https://github.com/ZeusPerez/go-test-kit). I hope the readers find this material interesting. Happy testing! 😄
+If you want to have the examples I used in this post, I've stored them in [this repository](https://github.com/ZeusPerez/go-test-kit). I hope the readers find this material interesting. Happy testing! 😄
