Add somme corrections

--- a/_posts/2022-07-06-go-testing-101.md
+++ b/_posts/2022-07-06-go-testing-101.md
@@ -105,24 +105,24 @@ func TestSumTable(t *testing.T) {
 
 ## Mocks
 
-There are some Golang packages related to mocking but I think that there are two more widely used by far, especially the first one:
+There are some Golang packages related to mocking but I think there are two more widely used by far, especially the first one:
 
 - [mockery](https://github.com/vektra/mockery) - Third-party package.
 - [gomock](https://pkg.go.dev/github.com/golang/mock/gomock) - Part of Golang standard libraries.
 
-Both of the packages above have documentation about how to use them so I won't get into the details of any specific library.
+Both of the packages above have documentation about how to use them, so I won't get into the details of any specific library.
 
 Mocks in Golang have the peculiarity that they need to be created over an existing interface, which means that you cannot mock a struct and you should always receive and handle interfaces over concrete structs if you want to make extensive testing.
 
 The strategies I used so far, consist of generating the Mock for the desired interfaces, including the package in the tests in which you want to use the mocks, writing the expectations and the returns, and finally asserting that the expectations have been met.
 
-Golang community good practices mention that you should not create interfaces just for the sake of testing and you should use the real object instead, but I find this very confusing for a specific use case: **testing external services.**
+Golang community good practices recommend not create interfaces just for the sake of testing and use the real object instead, but I find this very confusing for a specific use case: **testing external services.**
 
 <br/><br/>
 
 ### Testing external services
 
-If you want to test some piece of code that is making a request to an external service, it's uncommon that you want to make a real connection when running your test suite, so if you want to test the code handling that request you need to mock the response of this request. Over my experience with GO, I've seen two ways of doing this:
+If you want to test some piece of code that is making a request to an external service, it's uncommon that you want to make a real connection when running your test suite, so if you want to test the code handling that request, you need to mock the response of this request. Over my experience with GO, I've seen two ways of doing this:
 
 #### **1. Mocking the server**
 
@@ -209,7 +209,7 @@ func TestGetRandomNumber(t *testing.T) {
 
 The code above is only to exemplify in a simple way how to use the mock, but we don't usually create a test for testing the mock and this is usually included in a bigger test case.
 
-In line with this, if you are creating a public package that is exposed for external use, my advice is that you provide the mock too. This way, the users of your code won't have to do it themselves and, creating the mock is usually easier for you because you have the interface already defined in your code.
+In line with this, if you are creating a public package that is exposed for external use, my advice is to provide the mock too. This way, the users of your code won't have to do it themselves and, creating the mock is usually easier for you because you have the interface already defined in your code.
 
 <br/><br/>
 
@@ -350,7 +350,7 @@ For this section, I won't add an example to the post because it'll add too much 
 
 ## Coverage report
 
-Another great feature that GO has natively is the coverage report for the tests. Furthermore, it makes it quite simple to execute. Using the `-cover` option, when executing `go test`, it will print a summary of the report in the standard output. However, if you want a complete coverage profile you can use the `-coverprofile=<output_file>` option to generate you can visualize using `go tool`. For example, if you want to visualize in HTML format, you can run `go tool cover -html=<output_file>`. Again, we can find a more detailed and better explanation of [this feature in the official documentation](https://go.dev/blog/cover).
+Another great feature GO natively has  is the coverage report for the tests. Furthermore, it makes it quite simple to execute. Using the `-cover` option, when executing `go test`, will print a summary of the report in the standard output. However, if you want a complete coverage profile, you can use the `-coverprofile=<output_file>` option to generate a report you can visualize using `go tool`. For example, if you want to visualize in HTML format, you can run `go tool cover -html=<output_file>`. Again, we can find a more detailed and better explanation of [this feature in the official documentation](https://go.dev/blog/cover).
 
 <br/><br/>
 
