Fix markdown linter errors and add anchors to headings

--- a/_posts/2022-07-18-go-testing-101.md
+++ b/_posts/2022-07-18-go-testing-101.md
@@ -4,11 +4,11 @@ published: true
 ---
 
 
-Testing. It has been said and written a lot about testing in software engineering, and some new trends and strategies appeared, especially in the early 2000s. There is no silver bullet for doing it perfectly and it has been one of the topics that generated a lot of discussions about how to do it well and how much you should test your code. In this post, I'm not going to talk about abstract things or how they do it well, I just wanna show all the testing tools that I know and use for testing my Golang applications. This is mostly aimed at Golang beginners. If you have been using GO for a while, this will probably sound too basic for you. Let's start.
+Testing. It has been said and written a lot about testing in software engineering, and some new trends and strategies appeared, especially in the early 2000s. There is no silver bullet for doing it perfectly, and it has been one of the topics that generated a lot of discussions about how to do it well and how much you should test your code. In this post, I'm not going to talk about abstract things or how they do it well, I just wanna show all the testing tools that I know and use for testing my Golang applications. This is mostly aimed at Golang beginners. If you have been using GO for a while, this will probably sound too basic for you. Let's start.
 
 <br/><br/>
 
-## Unit testing
+## [Unit testing](#unit-testing)
 
 I'll try to use very simple code examples because the purpose of this is to show testing, not clever applications. Imagine that we have a function that sums 2 numbers:
 
@@ -62,11 +62,10 @@ For the sake of readability, I've used the [`assert` package](https://github.com
 
 `reflect.DeepEqual` is not always needed, but if you want to compare the inner values and not the struct, it is advisable to use it to avoid false negatives.
 
-If one of the returning values of the function is an `error`, it is very common to make the assert on the error to check if there is an error or not and if it is the expected error.
-
+If one of the returning values of the function is a `error`, it is very common to make the assert on the error to check if there is an error or not and if it is the expected error.
 <br/><br/>
 
-## Table driven tests
+## [Table driven tests](#table-driven-tests)
 
 This is a very common pattern in Go testing when you want to test several unit tests. It consists of creating an array of structs with the parameters needed for the tests, like name, inputs, outputs, etc., and iterating it to execute the function or method that we want to test. The unit tests above can be compacted in a table test like this:
 
@@ -103,28 +102,27 @@ func TestSumTable(t *testing.T) {
 
 <br/><br/>
 
-## Mocks
+## [Mocks](#mocks)
 
-There are some Golang packages related to mocking but I think there are two more widely used by far, especially the first one:
+There are some Golang packages related to mocking, but I think there are two more widely used by far, especially the first one:
 
 - [mockery](https://github.com/vektra/mockery) - Third-party package.
 - [gomock](https://pkg.go.dev/github.com/golang/mock/gomock) - Part of Golang standard libraries.
 
 Both of the packages above have documentation about how to use them, so I won't get into the details of any specific library.
 
-Mocks in Golang have the peculiarity that they need to be created over an existing interface, which means that you cannot mock a struct and you should always receive and handle interfaces over concrete structs if you want to make extensive testing.
+Mocks in Golang have the peculiarity that they need to be created over an existing interface, which means that you cannot mock a struct, and you should always receive and handle interfaces over concrete structs if you want to make extensive testing.
 
 The strategies I used so far, consist of generating the Mock for the desired interfaces, including the package in the tests in which you want to use the mocks, writing the expectations and the returns, and finally asserting that the expectations have been met.
 
-Golang community good practices recommend not create interfaces just for the sake of testing and use the real object instead, but I find this very confusing for a specific use case: **testing external services.**
-
+Golang's community good practices recommend not create interfaces just for the sake of testing and use the real object instead, but I find this very confusing for a specific use case: **testing external services.**
 <br/><br/>
 
-### Testing external services
+### [Testing external services](#testing-external-services)
 
 If you want to test some piece of code that is making a request to an external service, it's uncommon that you want to make a real connection when running your test suite, so if you want to test the code handling that request, you need to mock the response of this request. Over my experience with GO, I've seen two ways of doing this:
 
-#### **1. Mocking the server**
+#### [**1. Mocking the server**](#1-mocking-the-server)
 
 Golang standard library provides a package for making this kind of mocking: [httptest](https://pkg.go.dev/net/http/httptest). The common workflow for doing tests to external services with this package is:
 
@@ -132,9 +130,9 @@ Golang standard library provides a package for making this kind of mocking: [htt
 - Generate a new `httpserver` server injecting the handler created in the previous step.
 - Use the URL of this server instead of the service that your code is using. As you can imagine, the URL of the service needs to be configurable, which I don't see it much of a problem because I think is a good practice to be able to inject these configurations.
 
-I think that testing should be as simple as possible, and for me, this is a little bit of toil for each test that becomes worse as the test suite grows and adds noise to the testing code base. Furthermore, this option doesn't allow you to assert call expectations easily, which I think is important in complex code that makes several calls to one or more services. For these reasons, I prefer the next option over this one.
+I think that testing should be as simple as possible, and for me, this is a little of toil for each test that becomes worse as the test suite grows and adds noise to the testing code base. Furthermore, this option doesn't allow you to assert call expectations easily, which I think is important in complex code that makes several calls to one or more services. For these reasons, I prefer the next option over this one.
 
-#### **2. Wrapping the call on an interface**
+#### [**2. Wrapping the call on an interface**](#2-wrapping-the-call-on-an-interface)
 
 This is the option that I usually implement because I think is simple and the -off is just adding an interface for connecting to the service, which I think is good for the design of the code in most of the scenarios.
 
@@ -210,10 +208,9 @@ func TestGetRandomNumber(t *testing.T) {
 The code above is only to exemplify in a simple way how to use the mock, but we don't usually create a test for testing the mock and this is usually included in a bigger test case.
 
 In line with this, if you are creating a public package that is exposed for external use, my advice is to provide the mock too. This way, the users of your code won't have to do it themselves and, creating the mock is usually easier for you because you have the interface already defined in your code.
-
 <br/><br/>
 
-## Racy tests
+## [Racy tests](#racy-tests)
 
 Golang makes concurrency quite simple and also provides a race detector for helping to test it. Let's see how to use it following the previous example. Imagine that we want to get a random number from an API to return a random sum. We can do it with the following code:
 
@@ -278,10 +275,9 @@ func TestRacy(t *testing.T) {
 And then executing the `go test` command using the `-race` flag for race detection.
 
 You can find a detailed explanation of this feature and more examples in [this post from the Go blog](https://go.dev/blog/race-detector).
-
 <br/><br/>
 
-## Benchmark
+## [Benchmark](#benchmark)
 
 Another cool feature that Golang provides is benchmarking. If you have a piece of code that you want to be performant or you just want to measure its execution, you can write a benchmark test. The differences are that you need to pass a `*testing.B` argument instead of `*testing.T`, and you need to iterate until the value of the `N` property of that argument. Also, we need to pass the `-bench` flag to the `go test` command. Here is a basic example using the `sum` function that we defined at the beginning of this post:
 
@@ -300,11 +296,11 @@ func BenchmarkSum(b *testing.B) {
 
 Quite related to this, are the memory and CPU profiling options that GO provides. When running your tests, you can generate profiling files that you can visualize with `pprof` for example. [Here is a simple example from the GO docs](https://pkg.go.dev/runtime/pprof).
 
-This may be a little bit out of scope for this post, but if you want to know more about profiling your application, [this is a great post from Uber](https://eng.uber.com/pprof-go-profiler/) about how to do it.
+This may be a little out of scope for this post, but if you want to know more about profiling your application, [this is a great post from Uber](https://eng.uber.com/pprof-go-profiler/) about how to do it.
 
 ## Fuzzing
 
-Fuzzing consists of repeating several times the same tests but varying the inputs so we can test many different inputs at once.
+Fuzzing consists of repeating several times the same tests but varying the inputs, so we can test many different inputs at once.
 
 This is supported in Golang natively quite recently, from version 1.18, but there are some libraries, before including it in GO, that provided this behavior like [`google/gofuzz`](https://github.com/google/gofuzz).
 
@@ -324,10 +320,9 @@ func FuzzSum(f *testing.F) {
 As we want to vary two integers for this function, `x` and `y`, we need to seed them in the method `.Add`, which in this case receives two integers, and for the same reason we pass to `.Fuzz` a function with the signature `func(*testing.T, int, int)`, that again contains two integers.
 
 [Here is the link](https://go.dev/doc/fuzz/) to the Golang documentation for more extensive info.
-
 <br/><br/>
 
-## Acceptance testing or end-to-end
+## [Acceptance testing or end-to-end](#acceptance-testing-or-end-to-end)
 
 These tests consist of testing the complete workflow on your application instead of specific components. These are usually the most difficult tests because they require a wider setup, the execution is slower than the unit tests and there are more components of your application involved because you are testing a complete workflow.
 
@@ -345,16 +340,14 @@ You don't need to run all the dependencies of your application. I usually run th
 Once we have everything we need running, we can run our tests against the application making external requests. There are several frameworks and tools for helping on this part. I use [`testify/suite`](https://github.com/stretchr/testify#suite-package) because I find it simple, but there are others well known, like [Ginkgo](https://github.com/onsi/ginkgo) and [Gomega](https://onsi.github.io/gomega/), used for example on [Kubernetes code base](https://kubernetes.io/blog/2019/03/22/kubernetes-end-to-end-testing-for-everyone/).
 
 For this section, I won't add an example to the post because it'll add too much noise, but you can find it [in this repository](https://github.com/ZeusPerez/go-test-kit/tree/main/acceptance). As you can see, I start my toy application using Docker + `docker-compose`, I mock my external dependency and run it on the same port that the real one would be, and I run the tests.
-
 <br/><br/>
 
-## Coverage report
+## [Coverage report](#coverage-report)
 
-Another great feature GO natively has  is the coverage report for the tests. Furthermore, it makes it quite simple to execute. Using the `-cover` option, when executing `go test`, will print a summary of the report in the standard output. However, if you want a complete coverage profile, you can use the `-coverprofile=<output_file>` option to generate a report you can visualize using `go tool`. For example, if you want to visualize in HTML format, you can run `go tool cover -html=<output_file>`. Again, we can find a more detailed and better explanation of [this feature in the official documentation](https://go.dev/blog/cover).
-
+Another great feature GO natively has, is the coverage report for the tests. Furthermore, it makes it quite simple to execute. Using the `-cover` option, when executing `go test`, will print a summary of the report in the standard output. However, if you want a complete coverage profile, you can use the `-coverprofile=<output_file>` option to generate a report you can visualize using `go tool`. For example, if you want to visualize in HTML format, you can run `go tool cover -html=<output_file>`. Again, we can find a more detailed and better explanation of [this feature in the official documentation](https://go.dev/blog/cover).
 <br/><br/>
 
-## Final thoughts
+## [Final thoughts](#final-thoughts)
 
 Golang provides natively a lot of useful testing features and configuration, as we saw in this post, and there are even more that we didn't go through to avoid extending too much (you can check [more options on the official documentation](https://pkg.go.dev/cmd/go#hdr-Testing_flags)). Also, there is a good ecosystem of third-party tools for helping us.  
 
